src/test/ui/underscore-lifetime/where-clauses.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/where-clauses.rs:2:10
   |
LL | impl<'b: '_> Foo<'b> for i32 {}
   |          ^^ `'_` is a reserved lifetime name

error: aborting due to previous error

For more information about this error, try `rustc --explain E0637`.
