src/test/ui/underscore-lifetime/where-clauses.rs
trait Foo<'a> {}
impl<'b: '_> Foo<'b> for i32 {}
fn main() { }
